# kaboom-ai

./: .gitignore  CLAUDE.md  cloud-run-service.yaml  cloudbuild.yaml  main.py  n8n-config-sample.md  pyproject.toml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  celery-worker-service.yaml  pyproject.toml  requirements.txt  service.yaml  test_debug_settings.py  test_tachibana_api.py  test_tachibana_mock.py  websocket_test.html
api/.github/workflows/: deploy.yml
api/alembic/: env.py
api/app/: celery_worker_with_health.py  main.py
api/app/config/: settings.py
api/app/database/: connection.py
api/app/middleware/: auth.py  cors.py  rate_limit.py  security.py
api/app/models/: portfolio.py  trading.py  user.py
api/app/routers/: admin.py  ai_analysis.py  auth.py  frontend_integration.py  health.py  ingest.py  internal.py  job_progress.py  portfolios.py  portfolios_db.py  trades.py  trades_db.py  trading_integration.py
api/app/services/: __init__.py  advanced_ai_service.py  cloud_tasks.py  job_progress_service.py  market_data_service.py  monitoring_service.py  openrouter_client.py  portfolio_service.py  realtime_service.py  redis_client.py  reporting_service.py  routes.py  tachibana_client.py  trading_service.py  universe_selection_service.py
api/app/tasks/: ai_analysis_tasks.py  backtest_tasks.py  celery_app.py  enhanced_ingest_tasks.py  ingest_tasks.py  market_data_tasks.py  notification_tasks.py
api/app/websocket/: manager.py  routes.py
api/batch/: __init__.py
api/batch/config/: influx_config.example.toml  trading_hours.example.json  universe_settings.example.toml  universe_settings.toml
api/batch/data/: symbols_prime.csv
api/batch/docs/: RUNBOOK.md  implementation_plan.md
api/batch/ingest/: backfill_yf.py
api/batch/pipeline/: metrics.py  select_universe.py
api/batch/scripts/: generate_prime_symbols.py  generate_sector_map.py  import_sector_data.py  run_daily_ingest.py  (+2 more)
api/scripts/: generate_types.py
(+114 files in other folders)
