[project]
name = "kaboom-api"
version = "1.0.0"
description = "Real-time stock trading management system with AI analysis and WebSocket support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI Core
    "fastapi>=0.104.0,<0.116.0",
    "uvicorn[standard]>=0.24.0,<0.33.0",
    # WebSocket Support
    "websockets>=12.0,<14.0",
    # Async & Background Tasks
    "celery>=5.3.0,<5.5.0",
    "redis>=5.0.0,<6.0.0",
    # Database & Auth
    "supabase>=2.0.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    # External APIs
    "yfinance>=0.2.24,<0.3.0",
    "openai>=1.3.0,<2.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    # Data Processing
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "mplfinance>=0.12.10b0",
    # HTTP Client - Supabase compatible range
    "httpx>=0.26.0,<0.28.0",
    "aiohttp>=3.9.0,<4.0.0",
    # System Monitoring
    "psutil>=5.9.0,<7.0.0",
    # Development
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    # CloudRun Support
    "gunicorn>=21.2.0,<24.0.0",
    "influxdb3-python>=0.16.0",
    # Google Cloud Services
    "google-cloud-tasks>=2.16.0,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0"
]
